--- a/css/main.css
+++ b/css/main.css
@@ -37,10 +37,27 @@ p {
   font-weight: normal;
   font-style: normal;
 }
+.container {
+  padding: 0px 15px;
+}
 @media screen and (min-width: 480px) {
   .container {
     max-width: 480px;
   }
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .header__container {
@@ -95,7 +112,7 @@ p {
 }
 
 .hero {
-  padding: 30px 15px 0;
+  padding-top: 30px;
 }
 
 .hero__title {
@@ -127,7 +144,7 @@ p {
 
 .hero__text {
   letter-spacing: -0.01em;
-  text-align: justify;
+  text-align: left;
   margin-bottom: 35px;
 }
 
@@ -156,6 +173,7 @@ p {
   line-height: 1.25;
   padding: 12px 24px;
   border-radius: 5px;
+  border: none;
   text-align: center;
   letter-spacing: -0.02em;
   width: 100%;
@@ -170,4 +188,159 @@ p {
 .btn-main {
   background: #1b353d;
   color: #ffffff;
+  border: 1px solid #1b353d;
+}
+
+.form {
+  margin-bottom: 36px;
+}
+
+.section.form {
+  margin-top: 90px;
+}
+
+.section__form--title {
+  color: #333333;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 0.83;
+  letter-spacing: -0.02em;
+  margin-bottom: 36px;
+}
+
+.form__input {
+  width: 100%;
+  padding: 12px 0px 13px 16px;
+  outline: none;
+  background-color: #f2f2f2;
+  border: 0.75859px solid rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  margin-bottom: 24px;
+}
+.form__input::-webkit-input-placeholder {
+  font-family: "Helvetica 65 Medium", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.52;
+  letter-spacing: 0.3px;
+  color: #8b8b8b;
+}
+.form__input::-moz-placeholder {
+  font-family: "Helvetica 65 Medium", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.52;
+  letter-spacing: 0.3px;
+  color: #8b8b8b;
+}
+.form__input:-ms-input-placeholder {
+  font-family: "Helvetica 65 Medium", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.52;
+  letter-spacing: 0.3px;
+  color: #8b8b8b;
+}
+.form__input::-ms-input-placeholder {
+  font-family: "Helvetica 65 Medium", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.52;
+  letter-spacing: 0.3px;
+  color: #8b8b8b;
+}
+.form__input::placeholder {
+  font-family: "Helvetica 65 Medium", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.52;
+  letter-spacing: 0.3px;
+  color: #8b8b8b;
+}
+
+.form__input:focus {
+  border: 2px solid #1b353d;
+}
+
+.datalist {
+  margin-bottom: 36px;
+  background-image: url(../../imgs/ArrowDown.svg);
+  background-repeat: no-repeat;
+  background-position: right 12px top 18px;
+}
+
+.form__button {
+  width: 100%;
+  padding: 16px 0px;
+  background: #1b353d;
+  border: none;
+  border-radius: 5px;
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: -0.02em;
+}
+
+input::-webkit-calendar-picker-indicator {
+  opacity: 0;
+}
+
+.benefits {
+  padding-top: 42px;
+}
+
+.benefits__title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 0.62;
+  letter-spacing: -0.02em;
+  color: #333333;
+  margin-bottom: 48px;
+  text-align: center;
+}
+
+.benefits__item--title {
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 0.89;
+  color: #0f756b;
+  margin-bottom: 18px;
+}
+
+.benefits__item--subtitle {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.17;
+  color: #333333;
+  margin-bottom: 28px;
+}
+
+.benefits__img {
+  display: block;
+  margin: 0 auto 27px;
+}
+
+.benefits__descr {
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 1.65;
+  letter-spacing: -0.01em;
+  color: #333333;
+  text-align: justify;
+  margin-bottom: 27px;
+}
+
+.benefits__button {
+  display: block;
+  border: 1px solid #1b353d;
+  border-radius: 5px;
+  padding: 12px 24px;
+  background-color: transparent;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: -0.02em;
+  color: #1b353d;
+  margin-left: auto;
 }/*# sourceMappingURL=main.css.map */
