--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  padding: 30px 15px 0;
+  padding-top: 30px;
 }
 
 .hero__title {
@@ -35,7 +35,7 @@
 
 .hero__text {
   letter-spacing: -0.01em;
-  text-align: justify;
+  text-align: left;
 
   margin-bottom: 35px;
 }
@@ -60,6 +60,7 @@
   line-height: 1.25;
   padding: 12px 24px;
   border-radius: 5px;
+  border: none;
 
   text-align: center;
   letter-spacing: -0.02em;
@@ -77,6 +78,7 @@
 .btn-main {
   background: #1b353d;
   color: #ffffff;
+  border: 1px solid #1b353d;
 }
 
 // btn-alt
