--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
 @import "./common/common.scss";
 @import "./components/header.scss";
 @import "./components/hero";
+@import "./components/form";
+@import "./components/benefits";
