--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,8 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+h6 {
   margin: 0;
   padding: 0;
 }
@@ -28,6 +29,10 @@ ul {
 
 p {
   margin: 0;
+}
+
+img {
+  display: block;
 }
 
 @font-face {
@@ -58,6 +63,15 @@ p {
           clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.section__title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 0.62;
+  letter-spacing: -0.02em;
+  color: #333333;
+  text-align: center;
 }
 
 .header__container {
@@ -291,13 +305,11 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .benefits__title {
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 0.62;
-  letter-spacing: -0.02em;
-  color: #333333;
   margin-bottom: 48px;
-  text-align: center;
+}
+
+.benefits__item:not(:last-child) {
+  margin-bottom: 70px;
 }
 
 .benefits__item--title {
@@ -343,4 +355,113 @@ input::-webkit-calendar-picker-indicator {
   letter-spacing: -0.02em;
   color: #1b353d;
   margin-left: auto;
+  margin-bottom: 36px;
+}
+
+.about__list--title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 0.83;
+  letter-spacing: -0.02em;
+  color: #333333;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.about__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 8px;
+  overflow: hidden;
+}
+
+.about__item {
+  position: relative;
+  overflow: visible;
+}
+
+.about__title {
+  position: absolute;
+  left: 10px;
+  bottom: 4px;
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 11.2203px;
+  line-height: 0.84;
+  color: #ffffff;
+}
+
+.div_for_pos {
+  position: relative;
+}
+
+.scroll_btn {
+  position: absolute;
+  right: 4px;
+  bottom: 42px;
+  width: 26px;
+  height: 26px;
+  background: rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(3.2186px);
+          backdrop-filter: blur(3.2186px);
+  /* Note: backdrop-filter has minimal browser support */
+  border-radius: 128.744px;
+  border: none;
+}
+.scroll_btn svg {
+  margin: auto;
+}
+
+.instructors {
+  padding: 70px 0;
+}
+.instructors .section__title {
+  margin-bottom: 33px;
+}
+
+.instructors__list {
+  margin-top: 33px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.instructors__item {
+  padding: 40px 17px;
+  -ms-flex-preferred-size: calc((100% - 55px) / 2);
+      flex-basis: calc((100% - 55px) / 2);
+}
+.instructors__item:not(:nth-child(2n)) {
+  margin-right: 55px;
+}
+.instructors__item:not(:nth-last-child(-n+2)) {
+  margin-bottom: 17px;
+}
+
+.instructors__photo {
+  margin: 0 auto 18px;
+  border-radius: 24.0741px;
+}
+
+.instructor__position {
+  font-family: "Inter";
+  font-weight: 300;
+  font-size: 12.2932px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #495057;
+  line-height: 15px;
+  margin-bottom: 4px;
+}
+
+.instructor__name {
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 16.3909px;
+  text-align: center;
+  color: #000000;
+  line-height: 20px;
 }/*# sourceMappingURL=main.css.map */
